--- a/Работа с таблицами для mailtrain.ipynb
+++ b/Работа с таблицами для mailtrain.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 189,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
+   "execution_count": 190,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# подгружаю исходные файлы\n",
@@ -25,31 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# соединяю таблицы\n",
-    "frames = [table1, table2]\n",
-    "table = pd.concat(frames)\n",
-    "tab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# удаляю символы, которые вызывают ошибку в mailtrain\n",
-    "table['username']  = table['username'].str.translate(None, \"#\")"
+    "# соединяю таблицы, чищу таблицы от #\n",
+    "table_cleared = pd.concat([table1, table2])[pd.concat([table1, table2])['username'].str.contains('#')!=True]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {
     "collapsed": true
    },
@@ -57,12 +44,13 @@
    "source": [
     "# создаю таблицы для US/nonUS\n",
     "us_users = table1[table1['country']=='US']\n",
-    "nonus_users = table1[table1['country']!='US']"
+    "nonus_users = table1[table1['country']!='US']\n",
+    "nonus_users = nonus_users[nonus_users['username'].str.contains('#')!=True]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {
     "collapsed": true
    },
