--- a/Работа с таблицами для mailtrain.ipynb
+++ b/Работа с таблицами для mailtrain.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# подгружаю исходные файлы\n",
@@ -26,11 +30,53 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# соединяю таблицы, чищу таблицы от #\n",
     "table_cleared = pd.concat([table1, table2, table3, table4])[pd.concat([table1, table2, table3, table4])['username'].str.contains('#')!=True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>username</th>\n",
+       "      <th>email</th>\n",
+       "      <th>usk</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [user_id, username, email, usk, country]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 250,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_cleared.head(0)"
    ]
   },
   {
@@ -89,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# складываю полученные таблицы c разбиением по 100К строк\n",
@@ -98,15 +146,6 @@
     "for g, df in nonus_users.groupby(np.arange(len(nonus_users)) // 100000):\n",
     "    df.to_csv('nonus_users'+str(g)+'.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
