--- a/Чистилка данных из копипаста buyers.ipynb
+++ b/Чистилка данных из копипаста buyers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 222,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 223,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 224,
    "metadata": {
     "collapsed": true
    },
@@ -35,23 +35,27 @@
    "source": [
     "# удаляем ненужную шляпу\n",
     "db1 = db[db['Date']>1]\n",
-    "db2 = db1.reindex(columns=['Date','Hits','Users started', 'Users subscribed'])"
+    "db2 = db1[['Date','Hits','Users started', 'Users subscribed']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {},
+   "execution_count": 225,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# если надо ебунть текущий день\n",
-    "db2 = db2.drop(db2.index[len(db2)-1])"
+    "db2 = db2[:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {},
+   "execution_count": 226,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# заменяем ненужные символы на ';'\n",
@@ -63,8 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
+   "execution_count": 227,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# делаем новые столбцы, попутно заменяя хитрые и не очень пробелы на ;  регекспом\n",
@@ -77,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 228,
    "metadata": {
     "collapsed": true
    },
@@ -91,8 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
+   "execution_count": 229,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# приводим даты к нормальному формату\n",
@@ -105,8 +113,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "metadata": {},
+   "execution_count": 230,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# пишем на очищенную таблицу, ура.\n",
